config/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workbench
  namespace: workspace
spec:
  ingressClassName: nginx
  #tls:
  #  - hosts:
  #      - workbench.chorus-tre.local
  #    secretName: workbench-tls
  rules:
    - host: workbench.chorus-tre.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workbench
                port:
                  number: 8080
